fixed overflow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
   border: 1px solid red;
 } */
 html {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
